--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/about">About <span class="badge badge-primary">Memoirs Jekyll Theme</span></a></li>
         <li><a target="_blank" href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/">Get Memoirs</a></li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-        <li><a href="{{ site.baseurl }}/categories">Categories</a></li>     
+        <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
     </ul>
 </nav>
 
@@ -115,7 +115,7 @@ ga('send', 'pageview');
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }}
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a> by WowThemes.net
+                <a target="_blank" </a> HoGa News Wall by N3nz0
             </div>
         </div>
     </div>
