--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,8 @@ ga('send', 'pageview');
         <h3>Navigation</h3>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
         <li><a href="{{ site.baseurl }}/ahgz">AHGZ <span class="badge badge-primary">Allgemeine Hotel- und Gastronomie Zeitung</span></a></li>
+        <li><a href="{{ site.baseurl }}/ahgz">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+        <li><a href="{{ site.baseurl }}/ahgz">AHGZ <span class="badge badge-primary">Allgemeine Hotel- und Gastronomie Zeitung</span></a></li>
         <li><a target="_blank" href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/">Get Memoirs</a></li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
         <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
