--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@ ga('send', 'pageview');
 
     {% if site.mailchimp-list %}
     <!-- Newsletter
-    ================================================== -->
+    ==================================================
     <div class="newsletter text-center">
         <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
@@ -106,7 +106,7 @@ ga('send', 'pageview');
     </div>
     {% endif %}
 
-</div>
+</div>-->
 
 <!-- Begin Footer
 ================================================== -->
