--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,12 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/ahgz">AHGZ <span class="badge badge-primary">Allgemeine Hotel- und Gastronomie Zeitung</span></a></li>
         <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
         <li><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de <span class="badge badge-primary">Hotellerie in Deutschland, Schweiz & Österreich</span></a></li>
+        <li><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 <span class="badge badge-primary">TÄGLICHE NEWS FÜR DIE HOTELLERIE</span></a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+
         <li><a target="_blank" href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/">Get Memoirs</a></li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
         <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
