--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de <span class="badge badge-primary">Hotellerie in Deutschland, Schweiz & Österreich</span></a></li>
         <li><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 <span class="badge badge-primary">TÄGLICHE NEWS FÜR DIE HOTELLERIE</span></a></li>
         <li><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal <span class="badge badge-primary">#Hotellerie</span></a></li>
-        <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de <span class="badge badge-primary">Branchen- und Presseportal für Hotellerie und Gastronomie</span></a></li>
+        <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de <span class="badge badge-primary">Branchen- und Presseportal</span></a></li>
         <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
         <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
 
