--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,10 +55,10 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></li>
         <li><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de </a></li>
         <li><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 </a></li>
-        <li><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal <span class="badge badge-primary">#Hotellerie</span></a></li>
-        <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de <span class="badge badge-primary">Branchen- und Presseportal</span></a></li>
-        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
-        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE <span class="badge badge-primary">Portal für die Hotel- und Gastro-Branche</span></a></li>
+        <li><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal </a></li>
+        <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></li>
+        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></li>
 
         <li><a target="_blank" href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/">Get Memoirs</a></li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
