--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@ ga('send', 'pageview');
     <ul>
         <h3>Navigation</h3>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/ahgz">AHGZ </a></li>
+        <li><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/2.jpg" title="Example Image Link" width="600" height="400" /></a></li>
         <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></li>
         <li><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de </a></li>
         <li><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 </a></li>
