--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,9 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 </a></li>
         <li><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal </a></li>
         <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></li>
+        <li><a href="{{ site.baseurl }}/dehoga-bundesverband">dehoga-bundesverband </a></li>
         <li><a href="{{ site.baseurl }}/hotelfachzeitung">Hotelfachzeitung</a></li>
-        <li><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></li>
+
 
         <li><a target="_blank" href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/">Get Memoirs</a></li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
