--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@ ga('send', 'pageview');
         <li><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></li>
         <li><a href="{{ site.baseurl }}/dehoga-bundesverband">dehoga-bundesverband </a></li>
         <li><a href="{{ site.baseurl }}/hotelfachzeitung">Hotelfachzeitung</a></li>
-				<li><a href="{{ site.baseurl }}/index">stream</a></li>
+				<li><a href="{{ site.baseurl }}/stream">stream</a></li>
     </ul>
 </nav>
 
